feat: add update device service callback
implement PUT /callback/service route and update swagger document.
